<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chatProfilePhoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/chatUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chatProfilePhoto"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/chatProfilePhoto"
        android:text="@string/username"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chatPreview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chatUsername"
        android:layout_alignStart="@+id/chatUsername"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/grey"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/chatDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chatUsername"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:text="@string/date"
        android:textAlignment="textEnd"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/box_border" />

    <RelativeLayout
        android:id="@+id/chatListItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

</RelativeLayout>